--- a/dist.ini
+++ b/dist.ini
@@ -3,13 +3,12 @@ author  = Mark Leighton Fisher <fishe116@purdue.edu>
 license = Perl_5
 copyright_holder = Mark Leighton Fisher
 copyright_year   = 2013
+version          = 1.5.2
 
 [Prereqs]
-perl             = 5.008008
+perl             = 5.012000
 
-; version provider
-[Git::NextVersion]  ; get version from last release tag
-version_regexp = ^release-(.+)$
+; NOTE: Version numbers are managed manually
 
 ; collect (newer) contributors list from Git
 [ContributorsFromGit]
@@ -33,7 +32,6 @@ exclude_filename = META.json    ; skip this generated file
 [MakeMaker]
 
 ; file modifications
-[OurPkgVersion]     ; add $VERSION = ... to all files
 [InsertCopyright]   ; add copyright at "# COPYRIGHT"
 
 ;[PodWeaver]         ; generate Pod
