Add prereqs and fix metadata
1) Add prereqs Exception::Class, ReadonlyX, Set::Scalar, and Test::Most.

2) Fix metadata for author email, version, and copyright year.

--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,16 @@
 name    = Set-Jaccard-SimilarityCoefficient
-author  = Mark Leighton Fisher <fishe116@purdue.edu>
+author  = Mark Leighton Fisher <markleightonfisher@gmail.com>
 license = Perl_5
 copyright_holder = Mark Leighton Fisher
-copyright_year   = 2013
-version          = 1.5.2
+copyright_year   = 2018
+version          = 1.6.0
 
 [Prereqs]
 perl             = 5.012000
+Exception::Class = 1.42
+ReadonlyX        = 1.00
+Set::Scalar      = 1.29
+Test::Most       = 0.34
 
 ; NOTE: Version numbers are managed manually
 
